--- a/biostatistics.html
+++ b/biostatistics.html
@@ -227,7 +227,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-15</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/licor/jobs/1837383'>Job Application for Sales Consultant, Bio (United States, Atlanta based) at LI-COR</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/licor/jobs/1837383'>Job Application for Sales Consultant, Bio (United States, Atlanta based) at LI-COR</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-15</p>
 <hr/>
@@ -295,7 +295,7 @@ files, writing application programs within a statistical software, analyzing dat
 midline and endline quantitative data collection points. The primary outcomes of
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ergomed/743999691394798-biostatistician'>Ergomed Biostatistician | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Ergomed/743999691394798-biostatistician'>Ergomed Biostatistician | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">K?ln, Germany</span></p>
 <p>Posted on: 2019-09-06</p>
 <hr/>
@@ -303,7 +303,7 @@ midline and endline quantitative data collection points. The primary outcomes of
 <p><span class="badge badge-light">Waltham, MA</span></p>
 <p>Posted on: 2019-09-06</p>
 <hr/>
-<h5><a href='https://www.mrc-bsu.cam.ac.uk/training/short-courses/adaptive-designs-and-multiple-testing-procedures-for-clinical-trials/'>Adaptive Designs and Multiple Testing Procedures for Clinical Trials - MRC Biostatistics Unit</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.mrc-bsu.cam.ac.uk/training/short-courses/adaptive-designs-and-multiple-testing-procedures-for-clinical-trials/'>Adaptive Designs and Multiple Testing Procedures for Clinical Trials - MRC Biostatistics Unit</a></h5> 
 <p><span class="badge badge-light">Cambridge  Cambridge  Cambridge</span></p>
 <p>Posted on:: 2019-09-06</p>
 <hr/>
@@ -319,7 +319,7 @@ midline and endline quantitative data collection points. The primary outcomes of
 <p><span class="badge badge-light">South San Francisco, CA</span></p>
 <p>Posted on: 2019-09-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/thegreentreegroup/jobs/biomedical-statistics-consultant-aPz8ggZ0Kr6BMMaKiznY58'>Biomedical Statistics Consultant #0113 job at The Greentree Group in Beavercreek, OH, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/thegreentreegroup/jobs/biomedical-statistics-consultant-aPz8ggZ0Kr6BMMaKiznY58'>Biomedical Statistics Consultant #0113 job at The Greentree Group in Beavercreek, OH, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
@@ -392,7 +392,7 @@ of the Biostatistics department in the R&D Development organisation.</p>
 <p><span class="badge badge-light">Waltham, Massachusetts</span></p>
 <p>Posted on: 2019-08-24</p>
 <hr/>
-<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/C1A9F93A8E'>Statistics & Data Corporation (SDC) - Jobs: Principal Biostatistician - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/C1A9F93A8E'>Statistics & Data Corporation (SDC) - Jobs: Principal Biostatistician - Apply online</a></h5> 
 <p><span class="badge badge-light">Waltham, Massachusetts</span></p>
 <p>Posted on: 2019-08-24</p>
 <hr/>
@@ -400,7 +400,7 @@ of the Biostatistics department in the R&D Development organisation.</p>
 <p><span class="badge badge-light">Irvine, California</span></p>
 <p>Posted on: 2019-08-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/portola/job/o4aRafwZ'>Portola Pharmaceuticals Careers - Director, Biostatistics, Cardiovascular Programs</a></h5> 
+<h5><a href='https://jobs.jobvite.com/portola/job/o4aRafwZ'>Portola Pharmaceuticals Careers - Director, Biostatistics, Cardiovascular Programs</a></h5> 
 <p><span class="badge badge-light">South San Francisco, California</span></p>
 <p>Posted on: 2019-08-21</p>
 <hr/>
@@ -463,7 +463,7 @@ of focus, using the appropriate statistical and machine learning methodologies?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-03</p>
 <hr/>
-<h5><a href='https://careers-jax.icims.com/jobs/27009/biostatistician-ii/job'>Biostatistician II in Farmington, Connecticut | Careers at FACT ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-jax.icims.com/jobs/27009/biostatistician-ii/job'>Biostatistician II in Farmington, Connecticut | Careers at FACT ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 21, 2019 ... JAX was voted among the top 15 ?Best Places to Work in Academia? in the United 
 States in a poll conducted by The Scientist magazine! Our Values: INTEGRITY?...</p>
