--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -54,7 +54,7 @@
 <p><span class="badge badge-light">Mount Airy, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cortica/jobs/4498853002'>Job Application for Clinical Director of Speech Therapy at Cortica</a></h5> 
+<h5><a href='https://boards.greenhouse.io/cortica/jobs/4498853002'>Job Application for Clinical Director of Speech Therapy at Cortica</a></h5> 
 <p><span class="badge badge-light">Glendale, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -82,7 +82,7 @@
 <p><span class="badge badge-light">Torrance, CA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HSMC1/743999697680147-speech-language-pathologist-slp-'>HSMC Speech-Language Pathologist (SLP) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/HSMC1/743999697680147-speech-language-pathologist-slp-'>HSMC Speech-Language Pathologist (SLP) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -155,7 +155,7 @@ Language Pathologists to work Full-Time for our Skilled Nursing Facility in?...<
 <p><span class="badge badge-light">Richmond</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/kidscare-home-health/job/oC1C4fw3'>KidsCare Home Health Careers - Bilingual Pediatric Speech and Language Pathologist</a></h5> 
+<h5><a href='https://jobs.jobvite.com/kidscare-home-health/job/oC1C4fw3'>KidsCare Home Health Careers - Bilingual Pediatric Speech and Language Pathologist</a></h5> 
 <p><span class="badge badge-light">Fort Worth, TX</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -175,7 +175,7 @@ Language Pathologists to work Full-Time for our Skilled Nursing Facility in?...<
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.monroeconsulting.com/job/Malaysia/Speech-and-Swallowing-Therapist/31570'>
+<h5><a href='https://www.monroeconsulting.com/job/Malaysia/Speech-and-Swallowing-Therapist/31570'>
 	Speech and Swallowing Therapist | Monroe Consulting Group
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -186,7 +186,7 @@ Language Pathologists to work Full-Time for our Skilled Nursing Facility in?...<
 <p>1 day ago ... Title: Speech-Language Pathologist Clinical Fellowship. ID: 7048-GAD. Location: 
 Gadsden. Setting: SNF. Discipline: SLP-CFY. Status: Full Time?...</p>
 <hr/>
-<h5><a href='http://centersforcare.applytojob.com/apply/TXzeZBRKjd/Speech-Language-Pathologist-SLP'>Speech Language Pathologist  (SLP) - Centers Health Care - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://centersforcare.applytojob.com/apply/TXzeZBRKjd/Speech-Language-Pathologist-SLP'>Speech Language Pathologist  (SLP) - Centers Health Care - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -333,7 +333,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">SAN ANTONIO, TEXAS</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/bluesprigpediatrics/529dd092-1fa6-4ab5-82dd-7ba1fe4a8b65'>BlueSprig - Speech Language Pathologist Assistant (SLPA) (Northwest Houston, Katy, and Stafford)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bluesprigpediatrics/529dd092-1fa6-4ab5-82dd-7ba1fe4a8b65'>BlueSprig - Speech Language Pathologist Assistant (SLPA) (Northwest Houston, Katy, and Stafford)</a></h5> 
 <p><span class="badge badge-light">Katy, TX</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -345,7 +345,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://access-physical-therapy-wellness.breezy.hr/p/6c9a7b152dc1-speech-language-pathologist'>Speech Language Pathologist at Access Physical Therapy & Wellness</a></h5> 
+<h5><a href='https://access-physical-therapy-wellness.breezy.hr/p/6c9a7b152dc1-speech-language-pathologist'>Speech Language Pathologist at Access Physical Therapy & Wellness</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -357,7 +357,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">Carrollton, TX</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/VIVAPediatrics/743999696883293-speech-therapist'>VIVA Pediatrics Speech Therapist | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/VIVAPediatrics/743999696883293-speech-therapist'>VIVA Pediatrics Speech Therapist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -401,7 +401,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">Baltimore, MD</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<h5><a href='https://postings.com/recruiter-2086124/jobs/education-training-library/speech-pathologist-needed-immediately-full-time-position-garden-city-ny-11530/83868'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://postings.com/recruiter-2086124/jobs/education-training-library/speech-pathologist-needed-immediately-full-time-position-garden-city-ny-11530/83868'>
 Speech-Pathologist Needed immediately - full time position in Garden City, from Kidz Therapy Services PLLC, by Anna Stellman
 </a></h5> 
 <p><span class="badge badge-light">Garden City, NY</span></p>
@@ -411,7 +411,7 @@ Speech-Pathologist Needed immediately - full time position in Garden City, from 
 <p><span class="badge badge-light">Carrollton, TX</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://breakthroughbehavior.applytojob.com/apply/urlzQZjsrx/Speech-Therapy-Support-Assistant-RDV-Clinic'>Speech Therapy Support Assistant - RDV Clinic - Breakthrough Behavior - Career Page</a></h5> 
+<h5><a href='http://breakthroughbehavior.applytojob.com/apply/urlzQZjsrx/Speech-Therapy-Support-Assistant-RDV-Clinic'>Speech Therapy Support Assistant - RDV Clinic - Breakthrough Behavior - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
